--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --primary-color: #4A90E2;
     --secondary-color: #50C878;
